FIXED: Collector usage changed with toList + minor application properties setup